# Syncbot

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Syncbot_MANIFEST.yaml  Syncbot_MANIFESTS.yaml  demo_browse.py  demo_menu.py  manifest.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/copilot-instructions.d/: building_examples_policy.md  cli_menu_patterns.md  colour_key_usage.md  documentation_guidelines.md  logging_policy.md  project_classification.md  root_modes_workspace_project_paths.md  tuilkit_enabled_apps_guidelines.md
config/: Syncbot_CONFIG.json  Syncbot_CONFIG.json.bak
config/GLOBAL_SHARED.d/: COLOURS.json  FS_OPERATIONS.json  TIME_STAMP_OPTIONS.json
config/devices.d/: README.md  ghost.yaml  nas.yaml
docs/: BACKUP_MODE_CONFIGURATION.md  CHANGELOG.md  CONFIG_SETUP.md  DEVICE_QUICK_REFERENCE.md  MENU_QUICK_REFERENCE.md  MENU_SYSTEM.md  QUICK_START.md  README.md  README_V2.md
examples/: TESTS_CONFIG.py  exemplar.py  test_paths.json
src/Syncbot/: BACKUP_README.md  __init__.py  bootstrap.py  main.py
src/Syncbot/proc/: backup_projects.py  menu_operations.py
tests/: conftest.py  test_backup_projects.py  test_syncbot_bootstrap.py
